--- a/css/custom.css
+++ b/css/custom.css
@@ -70,6 +70,7 @@
   background-color: white; 
   margin:0!important;
   padding-top: 20px;
+  color:#33B3D1;
   }
   
   .call-to-action{
@@ -82,7 +83,7 @@
       height:300px!important;
     }
   #owl-slider-one-img .owl-wrapper-outer{
-    height:629px!important;
+    height:568px!important;
   }
   .hero-subtitle {
     font-size: 12px!important;
@@ -105,4 +106,25 @@
     vertical-align: middle!important;
   }
    }
-  
+/* corrects first slider so full height*/
+   @media (min-width: 768px) { 
+   .hero-wrap{
+     height:560px!important;
+   }
+
+.container-full-height{
+  height:600px!important;
+}
+
+   }
+   
+   @media (min-width: 1000px) { 
+    .hero-wrap{
+      height:726px!important;
+    }
+ 
+ .container-full-height{
+   height:726px!important;
+ }
+ 
+    }
