fixed style issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -296,6 +296,10 @@
   border-radius: 0;
   background: rgba(0, 0, 0, 0.7);
 }
+
+.indicator-heading{
+  margin-top: 12%!important;
+}
 @media screen and (min-width: 768px) {
  .carousel-indicators {
     bottom: 0;
@@ -305,6 +309,11 @@
 /*------------------------------------------------------*/
 /* RESPONSIVE
 /*------------------------------------------------------*/
+@media only screen and (max-width: 320px) {
+  .indicator-heading{
+    font-size: 4px!important;
+  }
+}
 
 /*---------- MEDIA 480px ----------*/
 @media only screen and (max-width: 480px) {
@@ -312,12 +321,14 @@
  .carousel-indicators li img{
     width: 50%;
   }
+
  .carousel-indicators > li > div{
     width: 50%;
 	padding: 2px;
   }
+  
 .carousel-indicators > li > div > h5{
-    font-size: 9px;
+    font-size: 5px;
   }
  .carousel-indicators > li > div > p{
     display: none;
@@ -328,15 +339,16 @@
   }
 }
 
-/*---------- MEDIA 481px - 600px ----------*/
-@media (min-width: 481px) and (max-width: 600px) {
+/*---------- MEDIA 481px - 768px ----------*/
+@media (min-width: 481px) and (max-width: 768px) {
   /*---------- INDICATORS THUMBNAIL CONTROL ----------*/
 .carousel-indicators > li > div{
 	padding: 2px;
   }
  .carousel-indicators > li > div > h5{
-    font-size: 9px;
+    font-size: 9px!important;
   }
+
  .carousel-indicators > li > div > p{
    font-size: 9px;
    text-align: left;
